# ppIndoorLocalization

./: README.md  settings.gradle
Database/: N5M5l1.csv  N5M5l4.csv
PPILLib/: Config.h
PPILLib/droidCrypto/: BitVector.cpp  BitVector.h  CMakeLists.txt  ChannelWrapper.cpp  ChannelWrapper.h  Commit.h  Defines.cpp  Defines.h  Matrix.h  MatrixView.h  loguru.cpp  loguru.hpp
PPILLib/droidCrypto/Server/: CMakeLists.txt  main.cpp
PPILLib/droidCrypto/android/: android_entry.cpp  mainAndroid.cpp  mainAndroid.h
PPILLib/droidCrypto/as/: ArithmeticShareEnviroment.cpp  ArithmeticShareEnviroment.h  CommunicationHandler.cpp  CommunicationHandler.h  DeltaShare.cpp  DeltaShare.h  EuclideanDistancesComputations.cpp  EuclideanDistancesComputations.h
PPILLib/droidCrypto/gc/: HalfGate.cpp  HalfGate.h  WireLabel.cpp  WireLabel.h
PPILLib/droidCrypto/gc/circuits/: AESCircuit.cpp  AESCircuit.h  Circuit.cpp  Circuit.h  LowMCCircuit.cpp  LowMCCircuit.h  PPILCircuit.cpp  PPILCircuit.h  TestCircuit.cpp  TestCircuit.h
PPILLib/droidCrypto/ot/TwoChooseOne/: IknpDotExtReceiver.cpp  IknpDotExtSender.cpp  IknpOtExtReceiver.cpp  IknpOtExtSender.cpp  KosDotExtReceiver.cpp  KosDotExtReceiver.h  KosDotExtSender.cpp  KosDotExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  OTExtInterface.cpp  OTExtInterface.h
PPILLib/droidCrypto/tests/: CMakeLists.txt  test_gc_ppil.cpp
PPILLib/droidCrypto/utils/: Benchmark.h  LinearCode.cpp  LinearCode.h  Log.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
